@startuml

title __EXCEPTION's Class Diagram__\n

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoCourseInfoFound {
            + NoCourseInfoFound()
            + getQuery()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoInfoFound {
            + NoInfoFound()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoLibraryInfoFound {
            + NoLibraryInfoFound()
            + getQuery()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoProgrammeInfoFound {
            + NoProgrammeInfoFound()
            + getQuery()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoQuestionFound {
            + NoQuestionFound()
            + getQuery()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.NoTeacherInfoFound {
            + NoTeacherInfoFound()
            + getQuery()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.upf.nli.analyzer.semantic_analyzer {
      namespace exception {
        class com.upf.nli.analyzer.semantic_analyzer.exception.SemanticFrameDoesNotExist {
            + SemanticFrameDoesNotExist()
        }
      }
    }
  }
  

  com.upf.nli.analyzer.semantic_analyzer.exception.NoCourseInfoFound o-- com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity : query
  com.upf.nli.analyzer.semantic_analyzer.exception.NoLibraryInfoFound o-- com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity : query
  com.upf.nli.analyzer.semantic_analyzer.exception.NoProgrammeInfoFound o-- com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity : query
  com.upf.nli.analyzer.semantic_analyzer.exception.NoQuestionFound o-- com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity : query
  com.upf.nli.analyzer.semantic_analyzer.exception.NoTeacherInfoFound o-- com.upf.nli.analyzer.semantic_analyzer.entity.QueryEntity : query


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
